<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <include-->
<!--        android:id="@+id/include"-->
<!--        layout="@layout/content_main"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/bottom_toolbar_bar_height"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_new_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/palette_pastel_salmon_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/empty_concept_illustration_l"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/post_listing_background_description"
        android:src="@drawable/empty_concept_illustration_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>